# bnfgen

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  devenv.nix  flake.nix  treefmt.toml
.github/: dependabot.yml
.github/workflows/: build-with-nix.yml  ci.yml  devenv.yml  docker.yml  update-nix-flake.yml
crates/bnfgen-cli/: Cargo.toml
crates/bnfgen-cli/resource/: onboard.md
crates/bnfgen-cli/resource/syntax/: core.md  index.md  limit.md  regex.md  weight.md
crates/bnfgen-cli/src/: app.rs  cli.rs  main.rs  mcp.rs
crates/bnfgen-cli/src/mcp/: generate.rs  query_syntax.rs  resource.rs
crates/bnfgen-cli/src/mcp/snapshots/: bnfgen_cli__mcp__generate__tests__request_schema.snap
crates/bnfgen-core/: Cargo.toml
crates/bnfgen-core/examples/: bnf.bnfgen  brainfuck.bnfgen  core-ocaml.bnfgen
crates/bnfgen-core/src/: error.rs  generator.rs  lexer.rs  parser.lalrpop  regex.rs  report.rs  token.rs
crates/bnfgen-core/src/grammar/: alt.rs  checked.rs  graph.rs  mod.rs  raw.rs  rule.rs  state.rs  symbol.rs
crates/bnfgen-core/src/grammar/snapshots/: bnfgen__grammar__test__invalid_re.snap  bnfgen__grammar__test__repeat.snap  bnfgen__grammar__test__trap_loop.snap  bnfgen__grammar__test__tri_loop.snap  bnfgen__grammar__test__undefined_nt.snap  bnfgen__grammar__test__unreachable_nt.snap
crates/bnfgen-core/src/parse_tree/: tree.rs
crates/bnfgen-core/src/snapshots/: bnfgen__generator__test__typed_generator.snap  bnfgen__generator__test__typed_set_algebra_expr.snap  bnfgen__lexer__test__it_works.snap
examples/: bnf.bnfgen  gen.rs  set-algebra-typed.bnfgen  set-algebra.bnfgen
examples/error-prone/: dead-loop.bnfgen
flakes/: build-static.nix  build.nix  checks.nix
nix/: crossBuild.nix  default.nix  mkFormula.nix  mkShared.nix
src/: error.rs  generator.rs  grammar.rs  lexer.rs  lib.rs  parser.lalrpop  regex.rs  report.rs  span.rs  token.rs  utils.rs
src/grammar/: alt.rs  checked.rs  graph.rs  mod.rs  production.rs  raw.rs  rule.rs  state.rs  symbol.rs
src/grammar/snapshots/: bnfgen__grammar__checked__test__it_can_merge.snap  bnfgen__grammar__test__action.snap  bnfgen__grammar__test__brainfuck.snap  bnfgen__grammar__test__common_dead_loop.snap  bnfgen__grammar__test__duplicated_def.snap  bnfgen__grammar__test__invalid_repeat.snap  bnfgen__grammar__test__invalid_token.snap  bnfgen__grammar__test__repeat.snap  bnfgen__grammar__test__typed.snap  bnfgen__grammar__test__unexpected_eof.snap
src/parse_tree/: tree.rs
src/snapshots/: bnfgen__generator__test__core_ocaml.snap  bnfgen__generator__test__semantic_id_works.snap  bnfgen__generator__test__tree_generator.snap  bnfgen__generator__test__typed_generator.snap  bnfgen__generator__test__typed_set_algebra.snap  bnfgen__generator__test__typed_set_algebra_expr.snap  bnfgen__grammar__test__brainfuck.snap  bnfgen__grammar__test__duplicated_def.snap  bnfgen__grammar__test__invalid_re.snap  bnfgen__grammar__test__invalid_repeat.snap  bnfgen__grammar__test__invalid_token.snap  bnfgen__grammar__test__repeat.snap  bnfgen__grammar__test__trap_loop.snap  bnfgen__grammar__test__tri_loop.snap  bnfgen__grammar__test__undefined_nt.snap  bnfgen__grammar__test__unexpected_eof.snap  bnfgen__grammar__test__unreachable_nt.snap  bnfgen__lexer__test__it_works.snap  bnfgen__regex__test__it_works.snap
