[package]
name = "bnfgen"
version = "0.1.0"
edition = "2021"

[dependencies]
logos = "0.15.0"
lalrpop-util = "0.22.1"
indexmap = "2.9.0"
rand = "0.9.0"
typed-builder = "0.21.0"
regex-syntax = "0.8.5"
thiserror = "2.0.12"
miette = { version = "7.5.0", features = ["fancy"] }
petgraph = "0.8.1"
clap = { version = "4.5.35", features = ["derive"] }

[[bin]]
name = "bnfgen"
path = "src/bin/bnfgen.rs"

# Add a build-time dependency on the lalrpop library:
[build-dependencies]
# If you are supplying your own external lexer you can disable default features so that the
# built-in lexer feature is not included
lalrpop = { version = "0.22.1", default-features = false }

[dev-dependencies]
insta = { version = "1.41.1" }
