[package]
name = "bnfgen"
version = "0.1.0"
edition = "2021"

[dependencies]
logos = "0.15.1"
lalrpop-util = "0.22.2"
indexmap = "2.11.4"
rand = "0.9.2"
typed-builder = "0.22.0"
regex-syntax = "0.8.6"
thiserror = "2.0.17"
miette = { version = "7.6.0", features = ["fancy"] }
petgraph = "0.8.2"
clap = { version = "4.5.48", features = ["derive"] }

[[bin]]
name = "bnfgen"
path = "src/bin/bnfgen.rs"

# Add a build-time dependency on the lalrpop library:
[build-dependencies]
# If you are supplying your own external lexer you can disable default features so that the
# built-in lexer feature is not included
lalrpop = { version = "0.22.2", default-features = false }

[dev-dependencies]
insta = { version = "1.41.1" }
