[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace]
resolver = "2"
members = ["crates/*"]

# Required by crane for workspace-only Cargo.toml (no root package)
# Individual packages are built via pname override in flake.nix
[workspace.metadata.crane]
name = "wormhole"

[workspace.dependencies]
# workspace members
bnfgen = { path = "crates/bnfgen-core" }

# shared dependencies
miette = { version = "7.6.0" }
rand = { version = "0.10.1" }
typed-builder = { version = "0.23.2" }
