[package]
name = "bnfgen-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bnfgen = { workspace = true }
clap = { version = "4.5.59", features = ["derive"] }
miette = { workspace = true, features = ["fancy"] }
rand = { workspace = true }
rmcp = { version = "0.16.0", features = ["transport-io", "schemars"] }
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
schemars = { version = "1.2.1", features = ["derive"] }
anyhow = { version = "1.0.71" }

[dev-dependencies]
insta = { version = "1.41.1", features = ["json"] }
