[package]
name = "bnfgen-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bnfgen = { workspace = true }
clap = { version = "4.5.59", features = ["derive"] }
miette = { workspace = true, features = ["fancy"] }
rand = { workspace = true }
rmcp = { version = "0.16.0", features = [
  "transport-io",
  "schemars",
  "transport-streamable-http-server",
] }
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
schemars = { version = "1.2.1", features = ["derive"] }
anyhow = { version = "1.0.71" }
typed-builder = { workspace = true }
tokio-util = "0.7.18"
axum = "0.8.8"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing = "0.1.44"

[dev-dependencies]
insta = { version = "1.41.1", features = ["json"] }
