[package]
name = "bnfgen"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
logos = "0.16.1"
lalrpop-util = "0.23.1"
indexmap = "2.13.1"
regex-syntax = "0.8.10"
thiserror = "2.0.18"
petgraph = "0.8.3"
miette = { workspace = true, features = ["fancy"] }
rand = { workspace = true }
typed-builder = { workspace = true }

# Add a build-time dependency on the lalrpop library:
[build-dependencies]
# If you are supplying your own external lexer you can disable default features so that the
# built-in lexer feature is not included
lalrpop = { version = "0.23.1", default-features = false }

[dev-dependencies]
insta = { version = "1.47.2" }
